# CrystalPilot

./: .copier-answers.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  build_docs.sh  pyproject.toml
dockerfiles/: Dockerfile
docs/: conf.py  index.rst
src/exphub/app/: __main__.py  main.py  mvvm_factory.py
src/exphub/app/models/: EICClient.py  angle_plan.py  css_status.py  eic_control.py  experiment_info.py  main_model.py  newtabtemplate.py  t  temporal_analysis.py
src/exphub/app/view_models/: main.py
src/exphub/app/views/: angle_plan.py  ccs_status.py  css_status.py  eic_control.py  experiment_info.py  main.py  newtabtemplate.py  tab_content_panel.py  tabs_panel.py  temporal_analysis.py
tests/: test_app.py  test_model.py
